Bug 393533 - Kaffeine --lastchannel does not work when using minmal-mode
Summary: Kaffeine --lastchannel does not work when using minmal-mode
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: mchehab+kde@kernel.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-26 09:44 UTC by romeoK
Modified: 2018-04-26 13:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description romeoK 2018-04-26 09:44:40 UTC
Kaffeine 2.0.14

Tune in a tv channel and put Kaffeine into normal mode. Then close Kaffeine. Next time you open Kaffeine with --lastchannel it does tune to the last tv channel, it works as expected.

Now tune in a tv channel and put Kaffeine into minimal-mode. Then close Kaffeine. Next time you open Kaffeine with --lastchannel it does tune to the last tv channel too, but this time the intro selection screen is overlayed and does not disappear even when you press '5'. You then have to switch interface modes back and forth to get rid of the selection-screen and bring up the tv stream.
Comment 1 romeoK 2018-04-26 10:34:38 UTC
I need to add that in the configuration of Kaffeine, you have to set the startup-display-mode set to: 'Minimal mode' or 'remember last setting'. Otherwise the described bug does not appear.
Comment 2 Mauro Carvalho Chehab 2018-04-26 13:38:30 UTC
Git commit e12a856ef6896903e26376756cc9001a0473c793 by Mauro Carvalho Chehab.
> Committed on 26/04/2018 at 11:20.
> Pushed by mauroc into branch 'master'.
> 
> mainwindow: ensure that the display mode is properly applied
> 
> When Kaffeine isn't in normal mode, activating a new tab won't
> work, as the code with sets the active tab is not called. It
> should be called, no matter what.
> 
> Also, emit a displayModeChanged() signal there, to be sure that
> the menu hide/unhide will be properly set, and that the cursor
> hiding time will restart.
> 
> Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>
>